--- a/03_Data_Preprocessing/02_07_Pandas 피봇테이블과 그룹분석.ipynb
+++ b/03_Data_Preprocessing/02_07_Pandas 피봇테이블과 그룹분석.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T07:57:24.447913Z",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T07:57:31.633423Z",
@@ -176,7 +176,7 @@
        "7  인천  2010   263203  수도권"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T07:57:46.261790Z",
@@ -294,7 +294,7 @@
        "7  인천  2010   263203"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T07:59:51.882090Z",
@@ -556,7 +556,7 @@
        "인천        NaN   263203.0  2890451.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "2015  3448737.0  9904312.0  2890451.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -769,7 +769,7 @@
        "7  인천  2010   263203  수도권"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -878,7 +878,7 @@
        "   2010   263203  수도권"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -1092,7 +1092,7 @@
        "   2010   263203  수도권"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -1123,7 +1123,7 @@
        "Name: 인구, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -1222,7 +1222,7 @@
        "   2010   263203"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "인천        NaN   263203.0  2890451.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:01:15.580629Z",
@@ -1401,7 +1401,7 @@
        "    인천        NaN   263203.0  2890451.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:02:06.803936Z",
@@ -1531,7 +1531,7 @@
        "7  인천  2010   263203  수도권"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:02:36.998932Z",
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:05:00.476859Z",
@@ -1752,7 +1752,7 @@
        "4    A  one      5     50"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:05:33.507718Z",
@@ -2008,10 +2008,10 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FC391DFD50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000250C8DCCDA0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:05:44.258048Z",
@@ -2044,7 +2044,7 @@
        "{'A': [0, 1, 4], 'B': [2, 3]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -2136,7 +2136,7 @@
        "4    A  one      5     50"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2154,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:06:22.057687Z",
@@ -2163,14 +2163,6 @@
     "school_cell_uuid": "2808b883914b41019243ae192891f057"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\maeng\\AppData\\Local\\Temp\\ipykernel_16864\\1171057664.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "  groups.sum()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2192,6 +2184,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>key2</th>\n",
        "      <th>data1</th>\n",
        "      <th>data2</th>\n",
        "    </tr>\n",
@@ -2199,16 +2192,19 @@
        "      <th>key1</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
+       "      <td>onetwoone</td>\n",
        "      <td>8</td>\n",
        "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
+       "      <td>onetwo</td>\n",
        "      <td>7</td>\n",
        "      <td>70</td>\n",
        "    </tr>\n",
@@ -2217,13 +2213,13 @@
        "</div>"
       ],
       "text/plain": [
-       "      data1  data2\n",
-       "key1              \n",
-       "A         8     80\n",
-       "B         7     70"
+       "           key2  data1  data2\n",
+       "key1                         \n",
+       "A     onetwoone      8     80\n",
+       "B        onetwo      7     70"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2319,7 @@
        "4    A  one      5     50"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2334,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -2348,7 +2344,7 @@
        "Name: data1, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:06:57.087344Z",
@@ -2377,7 +2373,7 @@
        "Name: data1, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,14 +2525,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\maeng\\AppData\\Local\\Temp\\ipykernel_16864\\2775473281.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "  df2.groupby(df2.key1).sum()[\"data1\"]  # 전체 데이터를 분석한 후 data1만 선택한 경우\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "key1\n",
@@ -2576,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:08:06.230929Z",
@@ -2632,7 +2620,7 @@
        "two      60"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2644,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T08:08:19.394335Z",
@@ -2728,7 +2716,7 @@
        "4    A  one      5     50"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5048,6 +5036,20 @@
     "만약 붓꽃 종(species)이 표시되지 않았을 때 이 수치들을 이용하여 붓꽃 종을 찾아낼 수 있을지 생각하라.\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
