--- a/01_Python_Grammer/numpyex.ipynb
+++ b/01_Python_Grammer/numpyex.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "388a493f-03db-4d9f-afb7-8c0e33d40584",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
       " [ 2  5  8 11 14]]\n",
       "<class 'numpy.ndarray'>\n",
       "(3, 5)\n",
-      "int64\n",
+      "int32\n",
       "2\n",
       "15\n"
      ]
@@ -491,19 +491,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "62ea4fc9-97c2-4a51-b666-be060b997623",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m c \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfloor( np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand( \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m ) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m( c )\n\u001b[0;32m      3\u001b[0m d \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfloor( np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand( \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m ) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[77. 23.]\n",
+      " [54. 15.]]\n",
+      "[[82. 96.]\n",
+      " [99. 30.]]\n",
+      "[[77. 23. 82. 96.]\n",
+      " [54. 15. 99. 30.]]\n",
+      "[[77. 23.]\n",
+      " [54. 15.]\n",
+      " [82. 96.]\n",
+      " [99. 30.]]\n",
+      "[[79. 25.]\n",
+      " [56. 17.]]\n"
      ]
     }
    ],
@@ -511,7 +518,7 @@
     "c = np.floor( np.random.rand( 2, 2 ) * 100)\n",
     "print( c )\n",
     "d = np.floor( np.random.rand( 2, 2 ) * 100)\n",
-    "prind( d )\n",
+    "print( d )\n",
     "print( np.hstack ( ( c, d ) ) )\n",
     "print( np.vstack ( ( c, d ) ) )\n",
     "print( c + 2 )"
@@ -519,19 +526,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "0b783ae7-7a4f-4ceb-868a-b8e6939f7dd4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m e \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfloor( np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand( \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m15\u001b[39m ) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m ) \u001b[38;5;66;03m#floor 소수점 잘라라\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m( e )\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m( np\u001b[38;5;241m.\u001b[39mhsplit( e, \u001b[38;5;241m3\u001b[39m ) )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[25. 27. 94. 41. 20. 92. 86. 40. 36. 12. 15. 31. 21. 19. 89.]\n",
+      " [ 8. 69. 91. 49. 31. 92. 89. 74. 64. 79. 95. 12. 26. 11. 96.]]\n",
+      "[array([[25., 27., 94., 41., 20.],\n",
+      "       [ 8., 69., 91., 49., 31.]]), array([[92., 86., 40., 36., 12.],\n",
+      "       [92., 89., 74., 64., 79.]]), array([[15., 31., 21., 19., 89.],\n",
+      "       [95., 12., 26., 11., 96.]])]\n",
+      "[[25. 27. 94. 41. 20.]\n",
+      " [ 8. 69. 91. 49. 31.]]\n",
+      "[[92. 86. 40. 36. 12.]\n",
+      " [92. 89. 74. 64. 79.]]\n",
+      "[[15. 31. 21. 19. 89.]\n",
+      " [95. 12. 26. 11. 96.]]\n",
+      "[[25. 27. 94.]\n",
+      " [ 8. 69. 91.]]\n",
+      "[[41. 20. 92. 86.]\n",
+      " [49. 31. 92. 89.]]\n",
+      "[[40. 36. 12. 15. 31.]\n",
+      " [74. 64. 79. 95. 12.]]\n",
+      "[[21. 19. 89.]\n",
+      " [26. 11. 96.]]\n"
      ]
     }
    ],
@@ -547,26 +569,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "555ed79d-ba12-40d9-bf95-35e86c9cd7b3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray( [ \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m ] )\n\u001b[0;32m      2\u001b[0m g \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray( [ \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE\u001b[39m\u001b[38;5;124m'\u001b[39m ] )\n\u001b[0;32m      3\u001b[0m h \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray( [ Trul, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m ] )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'C', 'D', 5]\n",
+      "['1' '2' 'C' 'D' '5']\n",
+      "['작다' '작다' '크다' '크다' '크다']\n",
+      "['참' '참' '거짓' '거짓' '참']\n"
      ]
     }
    ],
    "source": [
     "f = np.array( [ 1, 2, 3, 4, 5 ] )\n",
     "g = np.array( [ 'A', 'B', 'C', 'D', 'E' ] )\n",
-    "h = np.array( [ Trul, True, False, False, True ] )\n",
+    "h = np.array( [ True, True, False, False, True ] )\n",
     "# 삼항연산              조건 ? 참 : 거짓\n",
     "#                      참 if 조건 else 거짓\n",
     "print( [ x if z else y for x, y, z in zip( f, g, h ) ] ) # 이렇게 쓰면 연산 느려짐 -> where 쓰는편\n",
@@ -578,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "300ee4e7-67a7-4e58-80b3-39c9c4ce1a26",
    "metadata": {},
    "outputs": [
@@ -587,7 +608,7 @@
      "evalue": "unterminated string literal (detected at line 11) (1882924489.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[20], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    jk = np.lode( 'jk.npz )\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 11)\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    jk = np.lode( 'jk.npz )\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 11)\n"
      ]
     }
    ],
