--- a/03_Data_Preprocessing/02_02_Pandas 데이터 입출력.ipynb
+++ b/03_Data_Preprocessing/02_02_Pandas 데이터 입출력.ipynb
@@ -76,6 +76,7 @@
    ],
    "source": [
     "# pwd\n",
+    "# 현재 작업 디렉토리 확인\n",
     "import os\n",
     "os.getcwd()"
    ]
@@ -88,6 +89,7 @@
    },
    "outputs": [],
    "source": [
+    "# 현재 작업 디렉토리 안에 output이라는 하위 디렉토리를 생성\n",
     "os.makedirs(os.getcwd()+ '\\\\output',exist_ok=True)"
    ]
   },
@@ -111,6 +113,8 @@
     }
    ],
    "source": [
+    "#  output 폴더에 sample1.csv 파일이 생성\n",
+    "# 아래는 파일 내의 내용\n",
     "%%writefile output/sample1.csv\n",
     "c1, c2, c3\n",
     "1, 1.11, one\n",
@@ -729,6 +733,7 @@
     }
    ],
    "source": [
+    "# pandas를 사용해 CSV 파일을 읽어들일 때 사용하는 함수\n",
     "pd.read_csv?"
    ]
   },
@@ -806,6 +811,13 @@
    ],
    "source": [
     "pd.read_csv('output/sample2.csv', names=['c1', 'c2', 'c3'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`##질문`"
    ]
   },
   {
@@ -903,6 +915,15 @@
    "source": [
     "확장자가 CSV가 아닌 파일 즉, 데이터를 구분하는 구분자(separator)가 쉼표(comma)가 아니면 `sep` 인수를 써서 구분자를 사용자가 지정해준다.   \n",
     "만약 길이가 정해지지 않은 공백이 구분자인 경우에는 `\\s+` 정규식(regular expression) 문자열을 사용한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sep 인수는 CSV 파일을 읽어들일 때 열 구분자를 지정하는 데 사용  \n",
+    "기본값은 쉼표(,)지만, 만약 다른 구분자로 파일이 작성된 경우 이를 변경할 수 있음  \n",
+    "예를 들어, 탭으로 구분된 파일을 읽으려면 sep='\\t'로 설정할 수 있음"
    ]
   },
   {
@@ -1995,6 +2016,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -2967,30 +2989,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-01T08:37:38.586284Z",
      "start_time": "2023-11-01T08:37:25.512006Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas_datareader in c:\\users\\maeng\\anaconda3\\lib\\site-packages (0.10.0)\n",
-      "Requirement already satisfied: lxml in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from pandas_datareader) (4.9.3)\n",
-      "Requirement already satisfied: pandas>=0.23 in c:\\users\\maeng\\appdata\\roaming\\python\\python311\\site-packages (from pandas_datareader) (1.5.3)\n",
-      "Requirement already satisfied: requests>=2.19.0 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from pandas_datareader) (2.31.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (2023.3.post1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (1.24.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (2024.6.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\maeng\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas>=0.23->pandas_datareader) (1.16.0)\n",
+      "Collecting pandas_datareader\n",
+      "  Downloading pandas_datareader-0.10.0-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: lxml in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas_datareader) (5.2.1)\n",
+      "Requirement already satisfied: pandas>=0.23 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas_datareader) (2.2.2)\n",
+      "Requirement already satisfied: requests>=2.19.0 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas_datareader) (2.32.2)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from pandas>=0.23->pandas_datareader) (2023.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from requests>=2.19.0->pandas_datareader) (2024.6.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\82107\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=0.23->pandas_datareader) (1.16.0)\n",
+      "Downloading pandas_datareader-0.10.0-py3-none-any.whl (109 kB)\n",
+      "   ---------------------------------------- 0.0/109.5 kB ? eta -:--:--\n",
+      "   --- ------------------------------------ 10.2/109.5 kB ? eta -:--:--\n",
+      "   -------------- ------------------------ 41.0/109.5 kB 495.5 kB/s eta 0:00:01\n",
+      "   ---------------------------------------- 109.5/109.5 kB 1.3 MB/s eta 0:00:00\n",
+      "Installing collected packages: pandas_datareader\n",
+      "Successfully installed pandas_datareader-0.10.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -3001,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T06:39:34.667617Z",
@@ -3010,12 +3042,13 @@
    },
    "outputs": [],
    "source": [
+    "# 별칭 pdr\n",
     "import pandas_datareader as pdr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -3025,8 +3058,8 @@
       "text/plain": [
        "\u001b[1;31mSignature:\u001b[0m \u001b[0mpdr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_data_fred\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
        "\u001b[1;31mDocstring:\u001b[0m <no docstring>\n",
-       "\u001b[1;31mFile:\u001b[0m      c:\\users\\maeng\\anaconda3\\lib\\site-packages\\pandas_datareader\\data.py\n",
-       "\u001b[1;31mType:\u001b[0m      function\n"
+       "\u001b[1;31mFile:\u001b[0m      c:\\users\\82107\\anaconda3\\lib\\site-packages\\pandas_datareader\\data.py\n",
+       "\u001b[1;31mType:\u001b[0m      function"
       ]
      },
      "metadata": {},
@@ -3034,6 +3067,7 @@
     }
    ],
    "source": [
+    "# pandas_datareader을 활용해 FRED(Federal Reserve Economic Data) 데이터베이스에서 경제 데이터를 가져올 때 사용\n",
     "pdr.get_data_fred?"
    ]
   },
@@ -3315,7 +3349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
