--- a/03_Data_Preprocessing/02_04_Pandas 데이터프레임 데이터 조작.ipynb
+++ b/03_Data_Preprocessing/02_04_Pandas 데이터프레임 데이터 조작.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:14:50.193481Z",
@@ -61,8 +61,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pd.Series 시리즈 객체 생성  \n",
+    "range(10) 0부터 9까지의 정수 생성  \n",
+    "인덱스 / 값"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:14:50.669002Z",
@@ -86,7 +95,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:15:09.124876Z",
@@ -123,13 +132,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[3] = np.nan\n",
+    "s[3] = np.nan # 결측값으로 변경\n",
     "s"
    ]
   },
@@ -165,12 +174,25 @@
     "school_cell_uuid": "66076050617144f09682db0dfed06b0e"
    },
    "source": [
-    "데이터프레임에서는 각 열마다 별도로 데이터 갯수를 센다. 데이터에서 값이 누락된 부분을 찾을 때 유용하다."
+    "데이터프레임에서는 각 열마다 별도로 데이터 갯수를 센다. 데이터에서 값이 누락된 부분을 찾을 때 유용하다.  \n",
+    "결측값이 아닌 값의 개수의 셀 수 있다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "school_cell_uuid": "66076050617144f09682db0dfed06b0e"
+   },
+   "source": [
+    "``난수 생성`` (np.random.randint(5, size=(4, 4)) 0부터 4까지의 정수, 4행 4열  \n",
+    "``pd.DataFrame`` 난수 행렬을 데이터 프레임으로 변환  \n",
+    "``dtype=float`` 정수(int)에서 실수(float)로 변환  \n",
+    "``NaN``은 실수형 데이터로 취급함"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:16:10.329644Z",
@@ -247,7 +269,7 @@
        "3  4.0  3.0  4.0  2.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +353,7 @@
        "3  4.0  3.0  4.0  2.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,8 +364,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``df.count()``는 각 열에 결측값이 아닌 값이 몇 개인지 세어줌   \n",
+    "열 = 인덱스"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:16:13.221684Z",
@@ -362,13 +392,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.count()"
+    "df.count() # int64 64비트 정수형(Integer) 소수점 없는 숫자"
    ]
   },
   {
@@ -380,7 +410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## seaborn 데이터는 시각화할때만 쓰는게 아닌가...?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:16:33.773913Z",
@@ -394,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:16:35.444146Z",
@@ -551,12 +590,13 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 타이나닉 데이터셋 로드\n",
     "titanic = sns.load_dataset(\"titanic\")\n",
     "titanic.head()"
    ]
@@ -8959,7 +8999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
