--- a/03_Data_Preprocessing/02_04_Pandas 데이터프레임 데이터 조작.ipynb
+++ b/03_Data_Preprocessing/02_04_Pandas 데이터프레임 데이터 조작.ipynb
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:17:11.705772Z",
@@ -727,7 +727,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -763,7 +763,7 @@
        "Length: 100, dtype: int32"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-06T06:17:18.239460Z",
@@ -791,15 +791,16 @@
        "5    16\n",
        "3    14\n",
        "2    13\n",
-       "dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 시리즈(Series) 객체의 각 값이 얼마나 자주 나오는지 개수를 세어주는 함수\n",
     "s2.value_counts()"
    ]
   },
@@ -810,6 +811,15 @@
    },
    "source": [
     "데이터프레임에는 `value_counts` 메서드가 없으므로 각 열마다 별도로 적용해야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 별도 적용이 뭘까"
    ]
   },
   {
