--- a/05_Data_Analysis/Service_Analysis_Project.ipynb
+++ b/05_Data_Analysis/Service_Analysis_Project.ipynb
@@ -807,6 +807,7 @@
    ],
    "source": [
     "# step5) 시간 별 접속한 수강생 수 전처리 하기\n",
+    "# .dt.hour datetime 열에서 시간(hour) 부분만 추출\n",
     "\n",
     "access_data['access_date_time_hour'] = access_data['access_date_time'].dt.hour\n",
     "\n",
@@ -824,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T06:31:21.270633Z",
